--- a/BlackJackTmp/BlackJackTmp.vcxproj
+++ b/BlackJackTmp/BlackJackTmp.vcxproj
@@ -141,9 +141,11 @@
   <ItemGroup>
     <ClCompile Include="BlackJackTmp.cpp" />
     <ClCompile Include="Card.cpp" />
+    <ClCompile Include="Hand.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Card.h" />
+    <ClInclude Include="Hand.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
