--- a/BlackJackTmp/BlackJackTmp.vcxproj
+++ b/BlackJackTmp/BlackJackTmp.vcxproj
@@ -143,11 +143,15 @@
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="Hand.cpp" />
     <ClCompile Include="GenericPlayer.cpp" />
+    <ClCompile Include="House.cpp" />
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Card.h" />
     <ClInclude Include="GenericPlayer.h" />
     <ClInclude Include="Hand.h" />
+    <ClInclude Include="House.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
